[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://images/bg.png" type="Texture" id=2]
[ext_resource path="res://images/bg70.png" type="Texture" id=3]
[ext_resource path="res://fonts/Blox2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sounds/level.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
extra_spacing_char = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 64
extra_spacing_char = 10
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1200.0
margin_bottom = 576.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="Darken" type="Node2D" parent="."]
z_index = 1000

[node name="DarkenBackground" type="TextureRect" parent="Darken"]
margin_right = 1200.0
margin_bottom = 576.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="LevelTitle" type="TextureRect" parent="."]
margin_right = 1200.0
margin_bottom = 576.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="Label" type="Label" parent="LevelTitle"]
margin_left = -25.0
margin_right = 1175.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.839216, 0.996078, 0.65098, 1 )
text = "lEvEl"
align = 1
valign = 1

[node name="Level" type="Label" parent="LevelTitle"]
margin_left = 125.0
margin_right = 1325.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="LevelTitle"]
wait_time = 4.0
one_shot = true

[node name="LevelPlayer" type="AudioStreamPlayer" parent="LevelTitle"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Map" type="Node2D" parent="."]
